# app/Http/Controllers/Controller.php
@@ -1,29 +1,25 @@
 <?php
 
 namespace App\Http\Controllers;
+
 use OpenApi\Annotations as OA;
 
-    /**
-     * @OA\info(    
-     *      version="1.0",
-     *      title="My Rest Api", 
-     *      description="Laravel project to practice developing Rest API with L5 Swagger OpenApi",
-     *      x={
-     *          "logo": {
-     *              "url": "https://miro.medium.com/v2/resize:fit:1200/1*j3g3akaMpUOLegw0qthA.png"
-     *         }
-     * },
-     * @OA\Contact(
-     *      name="Steven Salvador",
-     *      email="steven.422023029@civitas.ukrida.ac.id"
-     * ),
-     * 
-     * 
-     * 
-     * )
-     */
-
+/**
+ * @OA\Info(
+ *      version="1.0",
+ *      title="My Rest API",
+ *      description="Laravel project to practice developing Rest API with L5 Swagger OpenApi",
+ *      @OA\Contact(
+ *          name="Salvador UKRIDA",
+ *          email="steven.422023029@civitas.ukrida.ac.id"
+ *      ),
+ *      x={
+ *          "logo": {
+ *              "url": "https://www.google.com/imgres?q=herry%20potter&imgurl=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fid%2Fthumb%2F2%2F21%2FDaniel_Radcliffe_di_film_Harry_Potter_and_The_Order_of_Phoenix.jpg%2F800px-Daniel_Radcliffe_di_film_Harry_Potter_and_The_Order_of_Phoenix.jpg&imgrefurl=https%3A%2F%2Fid.wikipedia.org%2Fwiki%2FHarry_Potter_(karakter)&docid=9UWRaCjrherILM&tbnid=fZ-Ap1wkarnKpM&vet=12ahUKEwiH-uqi8qOGAxXm-aACHdWgBOwQM3oECBQQAA..i&w=800&h=1067&hcb=2&ved=2ahUKEwiH-uqi8qOGAxXm-aACHdWgBOwQM3oECBQQAA"
+ *          }
+ *      }
+ * )
+ */
 abstract class Controller
 {
-    
 }
